--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>RandCard1</title>
+        <title>RandCard</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link type="text/css" rel="stylesheet" href="css/main.css">
         <link type="text/css" rel="stylesheet" href="css/footer.css">
