--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link type="text/css" rel="stylesheet" href="css/main.css">
         <link type="text/css" rel="stylesheet" href="css/footer.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/main.mjs" type="module"></script>
         <script src="js/footer.js"></script>
     </head>
     <body>
