--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <script src="js/footer.js"></script>
     </head>
     <body>
-        <main>
+        <header>
             <h1>Random Card</h1>
+        </header>
+        <main>
             <p>You picked <span class="cardName"></span></p>
             <p><img id="card" src="images/cards/53.png" alt="card"/></p>
             <p><a href="#">Next Card</a></p>
