--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <title>RandCard</title>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
               rel="stylesheet" type="text/css">
